Ajout du système de requête og et meta et de la fenêtre enfant "Easy Menu - Site web" et passage de la fenêtre main en global

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "google-tts-api": "0.0.4",
+        "html-metadata-parser": "^1.0.3",
         "say": "^0.16.0",
         "utf8": "^3.0.0"
     },
