--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
         "electron-builder": "^22.7.0"
     },
     "dependencies": {
+        "@cliqz/adblocker-electron": "^1.16.0",
+        "ad-block-js": "0.0.2",
+        "cross-fetch": "^3.0.5",
         "electron-store": "^5.2.0",
         "google-tts-api": "0.0.4",
         "html-metadata-parser": "^1.0.3",
+        "js-yaml": "^3.14.0",
         "say": "^0.16.0",
         "utf8": "^3.0.0"
     },
