--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "electron-store": "^5.2.0",
         "google-tts-api": "0.0.4",
         "html-metadata-parser": "^1.0.3",
-        "js-yaml": "^3.14.0",
         "say": "^0.16.0",
         "utf8": "^3.0.0"
     },
@@ -26,7 +25,8 @@
             "target": [
                 "deb",
                 "AppImage",
-                "rpm"
+                "rpm",
+                "snap"
             ]
         },
         "win": {
